crates/core-executor/src/tests/snapshots/session/query_current_session_context.snap
---
source: crates/core-executor/src/tests/query.rs
description: "\"SELECT CURRENT_WAREHOUSE(), CURRENT_DATABASE(), CURRENT_SCHEMA()\""
snapshot_kind: text
---
Ok(
    [
        "+-------------------+------------------+----------------+",
        "| current_warehouse | current_database | current_schema |",
        "+-------------------+------------------+----------------+",
        "| default           | embucket         | public         |",
        "+-------------------+------------------+----------------+",
    ],
)
