crates/core-executor/src/tests/snapshots/session/query_session.snap
---
source: crates/core-executor/src/tests/query.rs
description: "\"SELECT CURRENT_ROLE_TYPE(), CURRENT_ROLE()\""
---
Ok(
    [
        "+-------------------+--------------+",
        "| current_role_type | current_role |",
        "+-------------------+--------------+",
        "| ROLE              | default      |",
        "+-------------------+--------------+",
    ],
)
