crates/core-executor/src/tests/snapshots/session/query_session_current_ip_address.snap
---
source: crates/core-executor/src/tests/query.rs
description: "\"SELECT CURRENT_IP_ADDRESS()\""
---
Ok(
    [
        "+--------------------+",
        "| current_ip_address |",
        "+--------------------+",
        "| test_ip            |",
        "+--------------------+",
    ],
)
